  is enabled or not, rather than using function_exists().  Updated various files to use this new function instead
  of function_exists()

  Added new setting to schools where courses from the "default" school can be used in non-default degrees and groups.

  Added create table instructions to enagagements.install for required tables.
   

2021-08-05
  Added styling for "date" and "time" form element types.
  
  Added "major student progress" report to core system reports.
  
  Updated various reports (from stats module) to handle school_id in some way.
  
  Updated code to make sure school_id was supplied to key functions for determing course_id from name, as well
  as changes to prereq module to ensure school_id was supplied to key functions.
  
  Marked a couple unused methods/functions for removal by adding z__ before the name.
  
  Fixed bug in users' Faculty Advisees list, where in the comment for an advisee you couldn't see their major code correctly.
  

2021-08-04
  Removed out-of-date setting for student_search, where we can only search for majors in the current catalog year.
  
  Got rid of the course_search "report" where you can download offerings as CSV.  Should be under stats anyway.  For now,
  simply removed.
  
  Updated parts of course_search (dealing with getting syllabus) to only use course_id in queries.
  
  Updated add new degree and copy degree to pay attention to school_id.
  
  Added new icons to system, and made sure all core modules had an icon associated with them in the Admin Console.
  
  Changed the way we denote that we are NOT overriding a core variable.  Instead of deleting from table, we mark it as 'no'
  
  Added multi-school functionality to audit settings.
  
  Added multi-school functionality to course search settings.
  
  Fixed bug with upcoming appointments.
  
  If using schools, made it so the advising snapshot lets you switch between schools.
  

2021-08-03
  Added new variable_delete() function to db.inc.
  